--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "prettier": "^3.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
