--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
     "react-scroll": "^1.9.0",
+    "react-toastify": "^10.0.4",
     "swiper": "^11.0.7",
     "yup": "^1.4.0"
   },
